# LyricDecoder-rs

./: .gitignore  Cargo.toml  README.md  build.rs
LyricDecoder/: LyricDecoder.c
LyricDecoder/QQMusicDES/: des.c  des.h
src/: c_str.rs  lib.rs
src/LyricDecoder/: LyricDecoder.c
