[package]
name = "lyric-decoder"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["poly000"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "lyric_decoder"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }